Fix back button spacing

--- a/app/assets/stylesheets/current_movie.scss
+++ b/app/assets/stylesheets/current_movie.scss
@@ -351,7 +351,7 @@
   top: 0;
   left: 0;
   color: inherit;
-  margin: 20px;
+  margin: 50px;
 }
 
 .back-btn {
